Added the server.document-root option and wrote a proper URI to physical path parser
git-svn-id: file://localhost/var/svnroot/hottpd/trunk@60 10b18fc5-bf86-4583-be7b-d48ff0e42742

--- a/docs/hottpd.conf.example
+++ b/docs/hottpd.conf.example
@@ -1,6 +1,7 @@
 /* Example config for hottpd */
 server
 {
+	document-root = "/path/to/docroot/"
 	#softlimit = 1024
 	#somaxconn = 128
 	#loglevel = "default"
