Added keepalive-max option (maximum number of requests in a keepalive connection)
git-svn-id: file://localhost/var/svnroot/hottpd/trunk@86 10b18fc5-bf86-4583-be7b-d48ff0e42742

--- a/docs/hottpd.conf.example
+++ b/docs/hottpd.conf.example
@@ -28,4 +28,6 @@ performance
 	#stat-cache-time = 2 // Set to 0 to disable the stat cache
 	#noatime = yes
 	#max-conn-queue = 128 // Set to system maximum by default
+	/* Maximum requests in a keepalive connection. 0 or 1 disables keepalive entirely (bad idea, usually) */
+	#keepalive-max = 30
 }
