Add chroot() support.
git-svn-id: file://localhost/var/svnroot/hottpd/trunk@101 10b18fc5-bf86-4583-be7b-d48ff0e42742

--- a/docs/hottpd.conf.example
+++ b/docs/hottpd.conf.example
@@ -106,4 +106,10 @@ security
 	 * this setting defines what group to drop down to.
 	 */
 	#group = www-data
+
+	/*
+	 * Allows for "security" by changing root (hence 'chroot') to a subdir.
+	 * Can be broken out of, but provides some measure of security
+	 */
+	#chroot = /var/www/
 }
