performance::max-post-body setting, limits how large a POST may be sent to a server
git-svn-id: file://localhost/var/svnroot/hottpd/trunk@110 10b18fc5-bf86-4583-be7b-d48ff0e42742

--- a/docs/hottpd.conf.example
+++ b/docs/hottpd.conf.example
@@ -83,6 +83,12 @@ performance
 	 * Keeping this low on static servers is probably a good idea.
 	 */
 	#timeout-idle-lifetime = 5
+
+	/*
+	 * Maximum amount of data that may be sent in a POST, in bytes.
+	 * XXX make this a bit more flexible ;p
+	 */
+	#max-post-body = 1024
 }
 
 security
